test/errors/str1.ds

#OUTPUT
#Syntax Error: Invalid string assignment.
# -> [13] str s1 = 5
#
#END

#RET 0

extern func puts(s:str)

func main -> int
    str s1 = 5
    str s2 = s1
    
    puts(s1)
    puts(s2)
    
    return 0
end
